@@ -5,3 +5,15 @@ Sep 29, 2019 - added method in api class for adding a route without a decorator.
 
                 api.add_route("path", "handler")
 ----
+
+Sep 29, 2019 - added method for custom exceptions and function utility to debug exceptions if not registered.
+
+                def custom_exception_handler(request, response, exception_cls):
+                    response.text = "Oops! Something went wrong. Please, contact our customer support at +1-202-555-0127."
+
+                app.add_exception_handler(custom_exception_handler)
+
+                @app.route("/home")
+                def exception_throwing_handler(request, response):
+                    raise AssertionError("This handler should not be user")
+----
